overflow solved

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -25,11 +25,8 @@ $media: toRem(750);
 }
 body{
     font-family: var(--FF);
-    inline-size: 100dvw;
-    min-block-size: 100dvh;
+    min-block-size: 100vh;
     background: #fff;
-    overflow-inline: hidden; 
-    overflow-x: hidden; 
 }
 header{
     @extend %length;
@@ -148,6 +145,7 @@ header{
 
 .wrapper{
     inline-size: 100%;
+    overflow: hidden
 }
 .introSec{
     @extend %length;
